tests/dataset/tpc-ds/compiler/c/q15.error
/tmp/TestCCompiler_TPCDS_Goldenq153533084166/001/prog.c:227:3: error: unknown type name ‘customer_address_t’
  227 |   customer_address_t *data;
      |   ^~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq153533084166/001/prog.c: In function ‘create_customer_address_list’:
/tmp/TestCCompiler_TPCDS_Goldenq153533084166/001/prog.c:232:31: error: ‘customer_address_t’ undeclared (first use in this function); did you mean ‘customer_addres_t’?
  232 |   l.data = calloc(len, sizeof(customer_address_t));
      |                               ^~~~~~~~~~~~~~~~~~
      |                               customer_addres_t
/tmp/TestCCompiler_TPCDS_Goldenq153533084166/001/prog.c:232:31: note: each undeclared identifier is reported only once for each function it appears in
/tmp/TestCCompiler_TPCDS_Goldenq153533084166/001/prog.c: In function ‘test_TPCDS_Q15_zip’:
/tmp/TestCCompiler_TPCDS_Goldenq153533084166/001/prog.c:265:46: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  265 |   if (test_TPCDS_Q15_zip_filtered.len != tmp1.len) {
      |                                              ^
      |                                              ->
/tmp/TestCCompiler_TPCDS_Goldenq153533084166/001/prog.c:269:55: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  269 |       if (test_TPCDS_Q15_zip_filtered.data[i3] != tmp1.data[i3]) {
      |                                                       ^
      |                                                       ->
/tmp/TestCCompiler_TPCDS_Goldenq153533084166/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq153533084166/001/prog.c:312:33: error: incompatible types when assigning to type ‘list_int’ from type ‘filtered_item_list_t’
  312 |   test_TPCDS_Q15_zip_filtered = filtered;
      |                                 ^~~~~~~~
